Bug 596544 - These WebGL samples are slow on Firefox, fast on Chrome - r=vladimir, a=joe